fix(column-bar): update spacing variables

--- a/material/column-bar/column-bar.scss
+++ b/material/column-bar/column-bar.scss
@@ -1,12 +1,13 @@
 ngx-column-bar {
+    --ngx-column-bar-min-height: 48px;
     --ngx-column-bar-padding: var(--hy-spacing-x-small) var(--hy-spacing-small);
     --ngx-column-bar-title-first-child-padding-inline-start: var(
         --hy-spacing-x-small
     );
 
-    --ngx-column-bar-gap: var(--hy-spacing-medium);
-    --ngx-column-bar-elements-gap: var(--hy-spacing-medium);
+    --ngx-column-bar-gap: var(--hy-spacing-medium-small);
+    --ngx-column-bar-elements-gap: var(--hy-spacing-medium-small);
 
-    --ngx-column-bar-actions-group-min-inline-size: 3rem;
+    --ngx-column-bar-actions-group-min-inline-size: 48px;
     --ngx-column-bar-title-min-width: 6ch;
 }
